Fixed selecting a bookmark with a feed make the feed jump a little (it jumps nevertheless…)

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,6 +6,7 @@
 .bookmark {
     display: flex;
     gap: var(--spacing);
+    align-items: center;
 }
 
 a.bookmark {
